# MyMCP

./: README.md
mcp-server-webhooker/: README.md  main.py  pyproject.toml
mcp-server-websearch/: main.py  pyproject.toml
