[project]
name = "mcp-server-webhooker"
version = "1.0.0"
description = "Model Context Protocol (MCP) server that enables sending messages to various webhook services including Discord and Google Chat."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "requests>=2.32.3",
]
